--- a/src/main/resources/fxml/appView.fxml
+++ b/src/main/resources/fxml/appView.fxml
@@ -18,7 +18,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="617.0" stylesheets="@/style/appLayout.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FXMLController">
   <center>
-    <ImageView fx:id="centerImage" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+    <ImageView fx:id="centerImage" fitHeight="500.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
   </center>
   <bottom>
     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="50.0" spacing="15.0" BorderPane.alignment="CENTER">
@@ -42,7 +42,7 @@
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
+                    <MenuItem fx:id="closeItem" mnemonicParsing="false" text="Close" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
